# MySnipaste

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  app.rc
.github/workflows/: c-cpp.yml
docs/: Milestone1 Windows 截屏最小链路架构与实施计划.md  Milestone2 截图后进入编辑器外壳.md  Milestone3 基础编辑能力开发文档.md  Milestone4 贴图功能实现方案.md  Windows MVP 截屏工具设计文档.md
docs/superpowers/plans/: 2026-06-15-msix-dev-install.md  2026-06-15-ocr-result-popup.md
docs/superpowers/specs/: 2026-06-15-msix-dev-install-design.md  2026-06-15-ocr-result-popup-design.md
packaging/: Package.appxmanifest
scripts/: install_dev_msix.ps1  package_msix.ps1  uninstall_dev_msix.ps1
src/: main.cpp
src/app/: App.cpp  App.h  CommandIds.h
src/capture/: CaptureOverlayConfig.h  CaptureOverlayState.h  CaptureOverlayWindow.cpp  CaptureOverlayWindow.h  GdiCaptureBackend.cpp  GdiCaptureBackend.h  ICaptureBackend.h
src/editor/: ArrowShape.cpp  ArrowShape.h  BlurShape.cpp  BlurShape.h  CropGeometry.h  EditorDocument.h  EditorGeometry.h  EditorPaintConfig.h  EditorRenderer.cpp  EditorRenderer.h  EditorResult.h  EditorStyle.h  EditorStyleBar.cpp  EditorStyleBar.h  EditorToolbar.cpp  EditorToolbar.h  EditorViewport.cpp  EditorViewport.h  EditorWindow.cpp  EditorWindow.h  EllipseShape.cpp  EllipseShape.h  FreehandShape.cpp  FreehandShape.h  HighlightShape.cpp  HighlightShape.h  ImageRenderUtils.cpp  ImageRenderUtils.h  LineShape.cpp  LineShape.h  MosaicShape.cpp  MosaicShape.h  NumberShape.cpp  NumberShape.h  PinPosition.cpp  PinPosition.h  PixelUtils.h  RectangleShape.cpp  RectangleShape.h  RenderContext.h  (+10 more)
src/export/: ClipboardExporter.cpp  ClipboardExporter.h  ClipboardRetryPolicy.h  PngFileExporter.cpp  PngFileExporter.h
src/hotkey/: HotkeyManager.cpp  HotkeyManager.h
src/image/: DibBuilder.cpp  DibBuilder.h  ImageBuffer.cpp  ImageBuffer.h
src/longcapture/: LongCaptureController.cpp  LongCaptureController.h  LongCaptureOverlayConfig.h  LongCaptureOverlayLayout.cpp  LongCaptureOverlayLayout.h  LongCaptureOverlayWindow.cpp  LongCaptureOverlayWindow.h  LongCaptureSessionWindow.cpp  LongCaptureSessionWindow.h  LongCaptureStitcher.cpp  LongCaptureStitcher.h  ScrollDriver.cpp  ScrollDriver.h
src/ocr/: IOcrEngine.h  OcrClipboardText.cpp  OcrClipboardText.h  OcrDialogLayout.h  OcrPopupLayout.h  OcrPopupState.h  OcrResultPopup.cpp  OcrResultPopup.h  OcrTextDialog.cpp  OcrTextDialog.h  OcrThreadRunner.h  WindowsOcrEngine.cpp  WindowsOcrEngine.h
src/pin/: PinnedImageManager.cpp  PinnedImageManager.h  PinnedImageWindow.cpp  PinnedImageWindow.h
src/tray/: TrayIcon.cpp  TrayIcon.h  TrayMenuModel.cpp  TrayMenuModel.h  TrayNotificationPolicy.h
src/utils/: DpiUtils.cpp  DpiUtils.h  LogUtils.cpp  LogUtils.h  RectUtils.h  VirtualScreenUtils.h
tests/: test_capture_overlay_state.cpp  test_clipboard_retry_policy.cpp  test_crop_adjustment.cpp  test_dib_builder.cpp  test_editor_document.cpp  test_editor_geometry.cpp  test_editor_paint_config.cpp  test_editor_renderer.cpp  test_editor_style_bar.cpp  test_editor_toolbar.cpp  test_editor_viewport.cpp  test_framework.h  test_image_buffer.cpp  test_long_capture_overlay_config.cpp  test_long_capture_overlay_layout.cpp  test_long_capture_stitcher.cpp  test_main.cpp  test_msix_dev_workflow.ps1  test_ocr_dialog_layout.cpp  test_ocr_feature.cpp  test_ocr_popup_layout.cpp  test_ocr_popup_state.cpp  test_ocr_thread_runner.cpp  test_pin_feature.cpp  test_png_file_exporter.cpp  test_rect_utils.cpp  test_shape_editing.cpp  test_tool_manager.cpp  test_tray_menu_model.cpp  test_tray_notification_policy.cpp  test_virtual_screen_utils.cpp
